<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.leandroap.heroisapp.NovoUsuarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <LinearLayout
                android:id="@+id/llCotainerNovoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etCadastrarEmail"
                    style="@style/editTextTop"
                    android:drawableLeft="@drawable/ic_action_email"
                    android:hint="@string/hint_email" />

                <EditText
                    android:id="@+id/etCadastrarUsuario"
                    style="@style/editTextMiddle"
                    android:drawableLeft="@drawable/ic_action_usuario"
                    android:hint="@string/hint_usuario" />

                <EditText
                    android:id="@+id/etCadastrarSenha"
                    style="@style/editTextBottom"
                    android:drawableLeft="@drawable/ic_action_password"
                    android:hint="@string/hint_senha"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/btCadastrarNovoUsuario"
                style="@style/botao"
                android:text="@string/label_botao_cadastrar" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
